fixed sliding issue by overflow-x of logo img, removed topnav-container

--- a/css/_nav-design.scss
+++ b/css/_nav-design.scss
@@ -6,7 +6,7 @@
   left: 0;
   background-color: $ct-gray;
   overflow-x: hidden;
-  padding-top: 60px;
+  padding-top: 25px;
   transition: 0.5s;
   white-space: nowrap;
 }
@@ -15,11 +15,12 @@
 #sidenav:after {
   box-shadow: -3px 0px 6px rgba(0,0,0,0.16), -3px 0px 6px rgba(0,0,0,0.23);
   content: " ";
-  height: 100%;
+  height: calc(100% - #{$navbar-height});
   right: -10px;
   position: absolute;
   top: 0;
   width: 10px;
+  margin-top: $navbar-height;
 }
 
 @media only screen and (min-width: $bp-medium) {
@@ -31,22 +32,23 @@
     position: absolute;
     top: 0;
     width: 10px;
+    margin-top: 0px;
   }
 }
 
 
-#topnav, #topnav-container {
+#topnav {
   background-color: $ct-gray;
   overflow-x: hidden;
   width: 100vw;
-  z-index: 30;
+  z-index: 25;
 }
 
 
 #sidenav a {
-  padding: 8px 8px 8px 32px;
+  padding: 8px 8px 8px 23px;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 18px;
   color: $sidenav-main;
   display: block;
   font-family: montserrat;
@@ -56,74 +58,66 @@
 #sidenav-logo {
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 25px;
   width: 250px;
   height: 72px;
   position: relative;
+  overflow: hidden;
+  z-index: 30;
 
   img {
     position: absolute;
     top: 0;
     left: 0;
+    transition: $sidenav_logo-transition;
+    z-index: 30;
   }
+}
 
-  #sidenav-logo-closed {
-    opacity: 1;
-  }
-
+@media only screen and (min-width: $bp-medium) {
   #sidenav-logo-opened {
-    opacity: 0;
+    opacity: 0.0;
+  }
+
+  .sidenav_open-nav #sidenav-logo-opened {
+    opacity: 1.0 !important;
   }
 }
 
 
-.sidenav_open-nav #sidenav-logo-opened {
-  opacity: 1 !important;
+
+
+
+
+#topnav {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  z-index: 30;
 }
 
-.sidenav_open-nav #sidenav-logo-closed {
-  opacity: 0 !important;
-}
 
 
 
-
-
-
-
-#topnav-left, #topnav-right {
-  position: relative;
-  display: inline;
-  color: blue;
-  background-color: $ct-gray;
+#topnav div {
+  color: $topnav-main;
   text-align: center;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: 14px;
-  margin-bottom: 13px;
+  margin-top: auto;
+  margin-bottom: auto;
   text-decoration: none;
   font-size: 17px;
   white-space: nowrap;
-  z-index: 25;
 }
 
-#topnav-left {
-  float: left;
+#topnav-left, #topnav-right {
+  flex-grow: 0;
 }
 
-#topnav-right {
-  float: right;
-}
-
-#topnav-bg {
-  margin-top: 26px;
-  margin-left: 50px;
-  margin-top: 26px;
-  z-index: 22;
-  display: block;
-  position: absolute;
-  top: 0px;
-  left: 0px;
+#topnav-center {
   height: 1px;
-  width: 100vw;
+  flex-grow: 1;
   background-color: $topnav-main;
 }
